Kazuya Point 3: added short discussion of physical relevance of sign of fnl.

--- a/corrections.tex
+++ b/corrections.tex
@@ -457,6 +457,16 @@ WMAP5 data the bound on the tensor to scalar ratio becomes
 \end{equation}
 at the 95\% confidence level. 
 
+\subsection{Point 3: Physical meaning of $\fnl$}
+\textbf{Added to discussion in Section 2.6 on Pg 34:}
+
+We use the WMAP sign convention for $\fnl$ throughout. 
+This is the opposite of the Maldacena convention:
+$\fnl^\mathrm{WMAP}=-\fnl^\mathrm{Maldacena}$. One consequence of this choice of sign is that
+positive $\fnl$ implies a decrease in temperature in the CMB compared to the Gaussian case. This
+can be seen by noting that at linear order the temperature anisotropy in the CMB can be related to
+the curvature perturbation by $\cal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
+
 \subsection{Point 4: State $\cs\ll 1$ clearly}
 \textbf{Added to discussion on Pg 46:}
 We will assume throughout Part~\ref{part:dbi} of this thesis that motion takes
