--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1271,10 +1271,15 @@ known as the local non-Gaussianity $\fnlloc$:
 Here the 
 quadratic component represents a convolution and 
 $\R_\mathrm{G}$ denotes the Gaussian contribution
-\cite{Maldacena:2002vr}\footnotemark.
-\footnotetext{We use the WMAP sign convention for $\fnl$ throughout. 
+\cite{Maldacena:2002vr}.
+We use the WMAP sign convention for $\fnl$ throughout. 
 This is the opposite of the Maldacena convention:
-$\fnl^\mathrm{WMAP}=-\fnl^\mathrm{Maldacena}$.}
+$\fnl^\mathrm{WMAP}=-\fnl^\mathrm{Maldacena}$. One consequence of this choice of sign is that
+positive $\fnl$ implies a decrease in temperature in the CMB compared to the Gaussian case. This
+can be seen by noting that at linear order the temperature anisotropy in the CMB can be related to
+the curvature perturbation by $\cal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
+
+
 The local non-Gaussian parameter $\fnlloc$ can be related to the bispectrum by:
 \begin{equation}
  B(k_1, k_2, k_3) = \frac{6}{5}\fnlloc \left[P_\R^2(k_1)P_\R^2(k_2) +
