Change cal to mathcal to fix font.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1277,7 +1277,7 @@ This is the opposite of the Maldacena convention:
 $\fnl^\mathrm{WMAP}=-\fnl^\mathrm{Maldacena}$. One consequence of this choice of sign is that
 positive $\fnl$ implies a decrease in temperature in the CMB compared to the Gaussian case. This
 can be seen by noting that at linear order the temperature anisotropy in the CMB can be related to
-the curvature perturbation by $\cal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
+the curvature perturbation by $\mathcal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
 
 
 The local non-Gaussian parameter $\fnlloc$ can be related to the bispectrum by:
