Kazuya Point 2: Add discussion of differences between local and equilateral non-gaussianity in Section 2.5.

--- a/thesis.bib
+++ b/thesis.bib
@@ -2829,6 +2829,19 @@
   timestamp = {2008.07.04}
 }
 
+@ARTICLE{Koyama:2010xj,
+  author = {Koyama, Kazuya},
+  title = {{Non-Gaussianity of quantum fields during inflation}},
+  year = {2010},
+  archiveprefix = {arXiv},
+  eprint = {1002.0600},
+  keywords = {printed},
+  owner = {ith},
+  primaryclass = {hep-th},
+  slaccitation = {%%CITATION = 1002.0600;%%},
+  timestamp = {2010.03.31}
+}
+
 @ARTICLE{Krause:2007jr,
   author = {Krause, Axel},
   title = {{Large Gravitational Waves and Lyth Bound in Multi Brane Inflation}},
@@ -4188,7 +4201,6 @@
   author = {Polchinski, J.},
   title = {{String theory. Vol. 1: An introduction to the bosonic string}},
   note = {Cambridge, UK: Univ. Pr. (1998) 402 p},
-  __markedentry = {[ith]},
   owner = {ith},
   timestamp = {2009.08.06}
 }
@@ -4197,7 +4209,6 @@
   author = {Polchinski, J.},
   title = {{String theory. Vol. 2: Superstring theory and beyond}},
   note = {Cambridge, UK: Univ. Pr. (1998) 531 p},
-  __markedentry = {[ith]},
   owner = {ith},
   timestamp = {2009.08.06}
 }
@@ -4662,6 +4673,24 @@
   primaryclass = {astro-ph},
   slaccitation = {%%CITATION = 0809.2852;%%},
   timestamp = {2008.09.18}
+}
+
+@ARTICLE{Senatore:2009gt,
+  author = {Senatore, Leonardo and Smith, Kendrick M. and Zaldarriaga, Matias},
+  title = {{Non-Gaussianities in Single Field Inflation and their Optimal Limits
+	from the WMAP 5-year Data}},
+  journal = {JCAP},
+  year = {2010},
+  volume = {1001},
+  pages = {028},
+  __markedentry = {[ith]},
+  archiveprefix = {arXiv},
+  doi = {10.1088/1475-7516/2010/01/028},
+  eprint = {0905.3746},
+  owner = {ith},
+  primaryclass = {astro-ph.CO},
+  slaccitation = {%%CITATION = 0905.3746;%%},
+  timestamp = {2010.03.31}
 }
 
 @ARTICLE{witten2,
