--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -310,11 +310,8 @@ horizon. The results are for the range $K_1$.}
 % 
 
 The source term can also be compared at different time steps over all the $k$ values.
-In Figure~\ref{fig:src-3ns} the upper blue line shows $|S(k)|$ around 69 e-foldings
-before the end of
-inflation when $\dvp1$ has been initialised for only the very smallest $k$
-modes. The middle green
-line shows $|S|$ when all $\dvp1$ modes have started to evolve. Finally, the lower
+In Figure~\ref{fig:src-3ns} the green
+line shows $|S|$ when all $\dvp1$ modes have started to evolve. The lower
 red line illustrates $|S|$
 after all modes have exited the horizon, around 52 e-foldings before the end of
 inflation.
@@ -322,13 +319,10 @@ inflation.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.8\textwidth]{numerical/graphs/src_3ns-large}
-\caption[Source Term at Three Different Times]{The absolute magnitude of the source 
-term for all $k$ values in the range $K_1$ at three different time steps. The upper
-blue line shows $|S|$ at approximately $69$ e-foldings before the end of inflation
-when
-only the largest modes have been initialised. The middle green line shows $|S|$ when
-all modes
-have been initialised and the lower red dashed line when all modes have
+\caption[Source Term at Two Different Times]{The absolute magnitude of the source 
+term for all $k$ values in the range $K_1$ at two different time steps. The green line shows
+$|S|$ when all modes have been initialised. The lower red dashed line shows $|S|$ approximately 
+52 e-foldings before the end of inflation, when all modes have
 exited the horizon.}
 \label{fig:src-3ns}
 \end{figure}
