Mairi Point 13: Moved some calculations into an appendix.

--- a/corrections.tex
+++ b/corrections.tex
@@ -434,6 +434,16 @@ three of the models as $\bar{\varepsilon}_H$ increases towards unity. The end ti
 inflation is specified by hand for the contrived toy model, so this effect is
 not seen.
 
+\subsection{Point 13: Move some calculations into an appendix}
+\textbf{Three large sections of calculations have been moved into the appendix.}
+
+\textbf{All of Section 5.2.2 on Pg 68 has been moved to Appendix~\ref{sec:apx-multi}.}
+
+\textbf{A part of Section 5.5.2 on Pg 81 has been moved to Appendix~\ref{sec:apx-genbmbound}.}
+
+\textbf{The calculations of the analytic solutions for $\B$, $\wt{\C}$ and $\wt{\D}$ have been
+moved to Appendix~\ref{sec:apx-codetests}.}
+
 \subsection{Point 14: Redo figures with unphysical oscillations}
 \textbf{Fig 8.9 has been changed to remove the upper plot which showed the source term before all
 but the smallest mode had been initialised. The relevant text has also been changed. The new figure
