--- a/thesis.tex
+++ b/thesis.tex
@@ -43,7 +43,8 @@ dbi/multibrane,
 numerical/perts,
 numerical/numerical,
 numerical/results,
-theend
+theend,
+appendix
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
@@ -112,6 +113,11 @@ theend
 % The part:\thepart
 \include{theend}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+% % % % % % % % % % % % % % % % % % % % % % % % 
+% Appendix
+\appendix
+\include{appendix}
 
 % \listoftodos
 % \end{doublespace}
