--- a/corrections.tex
+++ b/corrections.tex
@@ -688,7 +688,7 @@ the curvature perturbation by $\mathcal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
 \subsection{Point 4: State $\cs\ll 1$ clearly}
 \textbf{Added to discussion on Pg 46:}
 We will assume throughout Part~\ref{part:dbi} of this thesis that motion takes
-place in the relatvistic limit in which $\cs\ll1$.
+place in the relativistic limit in which $\cs\ll1$.
 
 \subsection{Point 5: Rewrite Section 4.4}
 \textbf{See Point 8 above.}
