--- a/thesis.bib
+++ b/thesis.bib
@@ -27,6 +27,21 @@
   timestamp = {2009.06.26}
 }
 
+@ARTICLE{Adams:2001vc,
+  author = {Adams, Jennifer A. and Cresswell, Bevan and Easther, Richard},
+  title = {{Inflationary perturbations from a potential with a step}},
+  journal = {Phys. Rev.},
+  year = {2001},
+  volume = {D64},
+  pages = {123514},
+  archiveprefix = {arXiv},
+  doi = {10.1103/PhysRevD.64.123514},
+  eprint = {astro-ph/0102236},
+  owner = {ith},
+  slaccitation = {%%CITATION = ASTRO-PH/0102236;%%},
+  timestamp = {2010.04.19}
+}
+
 @ARTICLE{Agarwal:2008ah,
   author = {Agarwal, Nishant and Bean, Rachel},
   title = {{Cosmological constraints on general, single field inflation}},
@@ -1220,6 +1235,37 @@
   owner = {ith},
   slaccitation = {%%CITATION = ASTRO-PH/0507053;%%},
   timestamp = {2008.03.06}
+}
+
+@ARTICLE{Chen:2008wn,
+  author = {Chen, Xingang and Easther, Richard and Lim, Eugene A.},
+  title = {{Generation and Characterization of Large Non-Gaussianities in Single
+	Field Inflation}},
+  journal = {JCAP},
+  year = {2008},
+  volume = {0804},
+  pages = {010},
+  archiveprefix = {arXiv},
+  doi = {10.1088/1475-7516/2008/04/010},
+  eprint = {0801.3295},
+  owner = {ith},
+  primaryclass = {astro-ph},
+  slaccitation = {%%CITATION = 0801.3295;%%},
+  timestamp = {2010.04.19}
+}
+
+@ARTICLE{Chen:2006xjb,
+  author = {Chen, Xingang and Easther, Richard and Lim, Eugene A.},
+  title = {{Large non-Gaussianities in single field inflation}},
+  journal = {JCAP},
+  year = {2007},
+  volume = {0706},
+  pages = {023},
+  archiveprefix = {arXiv},
+  eprint = {astro-ph/0611645},
+  owner = {ith},
+  slaccitation = {%%CITATION = ASTRO-PH/0611645;%%},
+  timestamp = {2010.04.19}
 }
 
 @ARTICLE{chenetal,
@@ -4683,7 +4729,6 @@
   year = {2010},
   volume = {1001},
   pages = {028},
-  __markedentry = {[ith]},
   archiveprefix = {arXiv},
   doi = {10.1088/1475-7516/2010/01/028},
   eprint = {0905.3746},
@@ -4786,6 +4831,19 @@
   owner = {ian},
   slaccitation = {%%CITATION = ASTRO-PH/0205387;%%},
   timestamp = {2009.08.27}
+}
+
+@ARTICLE{Silk:1986vc,
+  author = {Silk, Joseph and Turner, Michael S.},
+  title = {{Double Inflation}},
+  journal = {Phys. Rev.},
+  year = {1987},
+  volume = {D35},
+  pages = {419},
+  doi = {10.1103/PhysRevD.35.419},
+  owner = {ith},
+  slaccitation = {%%CITATION = PHRVA,D35,419;%%},
+  timestamp = {2010.04.19}
 }
 
 @ARTICLE{brane6,
@@ -5153,6 +5211,22 @@
   timestamp = {2008.03.06}
 }
 
+@ARTICLE{Turner:1986te,
+  author = {Turner, Michael S. and Villumsen, Jens V. and Vittorio, Nicola and
+	Silk, Joseph and Juszkiewicz, Roman},
+  title = {{Double Inflation: A Possible Resolution of the Large Scale Structure
+	Problem}},
+  journal = {Astrophys. J.},
+  year = {1987},
+  volume = {323},
+  pages = {423-432},
+  __markedentry = {[ith]},
+  doi = {10.1086/165840},
+  owner = {ith},
+  slaccitation = {%%CITATION = ASJOA,323,423;%%},
+  timestamp = {2010.04.19}
+}
+
 @ARTICLE{Tzirakis:2008qy,
   author = {Tzirakis, Konstantinos and Kinney, William H.},
   title = {{Non-canonical generalizations of slow-roll inflation models}},
@@ -5483,21 +5557,22 @@ k\;Gregory:2008rf\;Johnson2000\;Lidsey:1999mc\;Linde:2005dd\;Lorenz:20
 08je\;McAllister:2007bg\;Mukhanov:2005sc\;Polchinski1996\;Sefusatti:20
 09xu\;Sudarsky:2009za\;cline\;douglas\;tyereview\;;
 1 ExplicitGroup:Paper 3: Perturbation computation\;0\;Acquaviva:2002ud
-\;Assadullahi:2009nf\;Bardeen:1980kt\;Barnaby:2006cq\;Bartolo:2001cw\;
-Bartolo:2003bz\;Bartolo:2004if\;Bernardeau:2001qr\;Bernardeau:2002jf\;
-Bernardeau:2002jy\;Bruni:1996im\;Callin:2006qx\;Carlson:2009it\;Cheung
-:2007sv\;Enqvist:2004bk\;Finelli:2003bp\;Finelli:2006wk\;Habib:2005mh\
-;Huang:2000bh\;Kim:2009pf\;Langlois:2005ii\;Langlois:2006vv\;Linde:199
-3cn\;Lyth:2004gb\;Lyth:2005du\;Lyth:2005fi\;Maldacena:2002vr\;Malik200
-5\;Malik:2001rm\;Malik:2003mv\;Malik:2005cy\;Malik:2006ir\;Malik:2006p
-m\;Malik:2008yp\;Martin:2006rs\;Mukhanov:1988jd\;Mukhanov:1990me\;Mukh
-anov:1996ak\;Musso:2006pt\;Nakamura:2003wk\;Nitta:2009jp\;Noh:2004bc\;
-Rigopoulos:2002mc\;Rigopoulos:2004ba\;Rigopoulos:2004gr\;Rigopoulos:20
-05xx\;Salopek:1988qh\;Salopek:1990jq\;Sasaki:1986hm\;Sasaki:1995aw\;Sa
-saki:1998ug\;Seery:2005gb\;Seery:2006vu\;Seery:2008qj\;Sinha:2005mn\;S
-tarobinsky:1982ee\;Starobinsky:1986fxa\;Sudarsky:2009za\;Tomita:1967\;
-Tomita:2005et\;Tomita:2005nu\;Vernizzi:2004nc\;Vretblad:2005\;Zeng:200
-4as\;book:liddle\;hustonmalik\;lidser3\;;
+\;Adams:2001vc\;Assadullahi:2009nf\;Bardeen:1980kt\;Barnaby:2006cq\;Ba
+rtolo:2001cw\;Bartolo:2003bz\;Bartolo:2004if\;Bernardeau:2001qr\;Berna
+rdeau:2002jf\;Bernardeau:2002jy\;Bruni:1996im\;Callin:2006qx\;Carlson:
+2009it\;Chen:2006xjb\;Chen:2008wn\;Cheung:2007sv\;Enqvist:2004bk\;Fine
+lli:2003bp\;Finelli:2006wk\;Habib:2005mh\;Huang:2000bh\;Kim:2009pf\;La
+nglois:2005ii\;Langlois:2006vv\;Linde:1993cn\;Lyth:2004gb\;Lyth:2005du
+\;Lyth:2005fi\;Maldacena:2002vr\;Malik2005\;Malik:2001rm\;Malik:2003mv
+\;Malik:2005cy\;Malik:2006ir\;Malik:2006pm\;Malik:2008yp\;Martin:2006r
+s\;Mukhanov:1988jd\;Mukhanov:1990me\;Mukhanov:1996ak\;Musso:2006pt\;Na
+kamura:2003wk\;Nitta:2009jp\;Noh:2004bc\;Rigopoulos:2002mc\;Rigopoulos
+:2004ba\;Rigopoulos:2004gr\;Rigopoulos:2005xx\;Salopek:1988qh\;Salopek
+:1990jq\;Sasaki:1986hm\;Sasaki:1995aw\;Sasaki:1998ug\;Seery:2005gb\;Se
+ery:2006vu\;Seery:2008qj\;Silk:1986vc\;Sinha:2005mn\;Starobinsky:1982e
+e\;Starobinsky:1986fxa\;Sudarsky:2009za\;Tomita:1967\;Tomita:2005et\;T
+omita:2005nu\;Turner:1986te\;Vernizzi:2004nc\;Vretblad:2005\;Zeng:2004
+as\;book:liddle\;hustonmalik\;lidser3\;;
 1 ExplicitGroup:New research areas\;0\;Barnaby:2007yb\;Barnaby:2008fk\
 ;Christopherson:2008ry\;;
 1 ExplicitGroup:DBI and resolved conifolds\;0\;Arroja:2009pd\;Bessada:
