--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -533,7 +533,7 @@ model has also been proposed \cite{Chen:2008wn}, with potential
 % 
 where again $\vp_b$, $c$ and $d$ parametrise the feature. At first order these models introduce
 noticeable differences in the scalar power spectrum. They are also known to be able to produce
-significant amounts of non-gaussianity in shapes which are not similar to either the local or
+significant amounts of non-Gaussianity in shapes which are not similar to either the local or
 equilateral types described in Section~\ref{sec:fnl-intro} \cite{Chen:2006xjb, Chen:2008wn}.
 
 
