--- a/thesis.bib
+++ b/thesis.bib
@@ -818,6 +818,20 @@
   timestamp = {2009.07.16}
 }
 
+@ARTICLE{1950ZNatA...5...65B,
+  author = {{Biermann}, L.},
+  title = {{{\"U}ber den Ursprung der Magnetfelder auf Sternen und im interstellaren
+	Raum (miteinem Anhang von A. Schl{\"u}ter)}},
+  journal = {Zeitschrift Naturforschung Teil A},
+  year = {1950},
+  volume = {5},
+  pages = {65-+},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {http://adsabs.harvard.edu/abs/1950ZNatA...5...65B},
+  owner = {ith},
+  timestamp = {2010.04.20}
+}
+
 @ARTICLE{Bird:2009pq,
   author = {Bird, Simeon and Peiris, Hiranya V. and Baumann, Daniel},
   title = {{Brane Inflation and the Overshoot Problem}},
@@ -1380,6 +1394,24 @@
   primaryclass = {astro-ph},
   slaccitation = {%%CITATION = 0809.3518;%%},
   timestamp = {2009.01.13}
+}
+
+@ARTICLE{Christopherson:2009bt,
+  author = {Christopherson, Adam J. and Malik, Karim A. and Matravers, David
+	R.},
+  title = {{Vorticity generation at second order}},
+  journal = {Phys. Rev.},
+  year = {2009},
+  volume = {D79},
+  pages = {123523},
+  __markedentry = {[ith]},
+  archiveprefix = {arXiv},
+  doi = {10.1103/PhysRevD.79.123523},
+  eprint = {0904.0940},
+  owner = {ith},
+  primaryclass = {astro-ph.CO},
+  slaccitation = {%%CITATION = 0904.0940;%%},
+  timestamp = {2010.04.20}
 }
 
 @ARTICLE{Cicoli:2008gp,
@@ -5220,7 +5252,6 @@
   year = {1987},
   volume = {323},
   pages = {423-432},
-  __markedentry = {[ith]},
   doi = {10.1086/165840},
   owner = {ith},
   slaccitation = {%%CITATION = ASJOA,323,423;%%},
@@ -5560,19 +5591,19 @@ k\;Gregory:2008rf\;Johnson2000\;Lidsey:1999mc\;Linde:2005dd\;Lorenz:20
 \;Adams:2001vc\;Assadullahi:2009nf\;Bardeen:1980kt\;Barnaby:2006cq\;Ba
 rtolo:2001cw\;Bartolo:2003bz\;Bartolo:2004if\;Bernardeau:2001qr\;Berna
 rdeau:2002jf\;Bernardeau:2002jy\;Bruni:1996im\;Callin:2006qx\;Carlson:
-2009it\;Chen:2006xjb\;Chen:2008wn\;Cheung:2007sv\;Enqvist:2004bk\;Fine
-lli:2003bp\;Finelli:2006wk\;Habib:2005mh\;Huang:2000bh\;Kim:2009pf\;La
-nglois:2005ii\;Langlois:2006vv\;Linde:1993cn\;Lyth:2004gb\;Lyth:2005du
-\;Lyth:2005fi\;Maldacena:2002vr\;Malik2005\;Malik:2001rm\;Malik:2003mv
-\;Malik:2005cy\;Malik:2006ir\;Malik:2006pm\;Malik:2008yp\;Martin:2006r
-s\;Mukhanov:1988jd\;Mukhanov:1990me\;Mukhanov:1996ak\;Musso:2006pt\;Na
-kamura:2003wk\;Nitta:2009jp\;Noh:2004bc\;Rigopoulos:2002mc\;Rigopoulos
-:2004ba\;Rigopoulos:2004gr\;Rigopoulos:2005xx\;Salopek:1988qh\;Salopek
-:1990jq\;Sasaki:1986hm\;Sasaki:1995aw\;Sasaki:1998ug\;Seery:2005gb\;Se
-ery:2006vu\;Seery:2008qj\;Silk:1986vc\;Sinha:2005mn\;Starobinsky:1982e
-e\;Starobinsky:1986fxa\;Sudarsky:2009za\;Tomita:1967\;Tomita:2005et\;T
-omita:2005nu\;Turner:1986te\;Vernizzi:2004nc\;Vretblad:2005\;Zeng:2004
-as\;book:liddle\;hustonmalik\;lidser3\;;
+2009it\;Chen:2006xjb\;Chen:2008wn\;Cheung:2007sv\;Christopherson:2009b
+t\;Enqvist:2004bk\;Finelli:2003bp\;Finelli:2006wk\;Habib:2005mh\;Huang
+:2000bh\;Kim:2009pf\;Langlois:2005ii\;Langlois:2006vv\;Linde:1993cn\;L
+yth:2004gb\;Lyth:2005du\;Lyth:2005fi\;Maldacena:2002vr\;Malik2005\;Mal
+ik:2001rm\;Malik:2003mv\;Malik:2005cy\;Malik:2006ir\;Malik:2006pm\;Mal
+ik:2008yp\;Martin:2006rs\;Mukhanov:1988jd\;Mukhanov:1990me\;Mukhanov:1
+996ak\;Musso:2006pt\;Nakamura:2003wk\;Nitta:2009jp\;Noh:2004bc\;Rigopo
+ulos:2002mc\;Rigopoulos:2004ba\;Rigopoulos:2004gr\;Rigopoulos:2005xx\;
+Salopek:1988qh\;Salopek:1990jq\;Sasaki:1986hm\;Sasaki:1995aw\;Sasaki:1
+998ug\;Seery:2005gb\;Seery:2006vu\;Seery:2008qj\;Silk:1986vc\;Sinha:20
+05mn\;Starobinsky:1982ee\;Starobinsky:1986fxa\;Sudarsky:2009za\;Tomita
+:1967\;Tomita:2005et\;Tomita:2005nu\;Turner:1986te\;Vernizzi:2004nc\;V
+retblad:2005\;Zeng:2004as\;book:liddle\;hustonmalik\;lidser3\;;
 1 ExplicitGroup:New research areas\;0\;Barnaby:2007yb\;Barnaby:2008fk\
 ;Christopherson:2008ry\;;
 1 ExplicitGroup:DBI and resolved conifolds\;0\;Arroja:2009pd\;Bessada:
