--- a/thesis.bib
+++ b/thesis.bib
@@ -1404,7 +1404,6 @@
   year = {2009},
   volume = {D79},
   pages = {123523},
-  __markedentry = {[ith]},
   archiveprefix = {arXiv},
   doi = {10.1103/PhysRevD.79.123523},
   eprint = {0904.0940},
@@ -1776,6 +1775,20 @@
   owner = {ith},
   slaccitation = {%%CITATION = HEP-PH/0405103;%%},
   timestamp = {2009.06.26}
+}
+
+@ARTICLE{Fergusson:2009nv,
+  author = {Fergusson, J. R. and Liguori, M. and Shellard, E. P. S.},
+  title = {{General CMB and Primordial Bispectrum Estimation I: Mode Expansion,
+	Map-Making and Measures of $\fnl$}},
+  year = {2009},
+  __markedentry = {[ith]},
+  archiveprefix = {arXiv},
+  eprint = {0912.5516},
+  owner = {ith},
+  primaryclass = {astro-ph.CO},
+  slaccitation = {%%CITATION = 0912.5516;%%},
+  timestamp = {2010.04.21}
 }
 
 @ARTICLE{Finelli:2006wk,
@@ -2872,6 +2885,20 @@
   timestamp = {2008.03.06}
 }
 
+@ARTICLE{Komatsu:2010fb,
+  author = {Komatsu, E. and others},
+  title = {{Seven-Year Wilkinson Microwave Anisotropy Probe (WMAP) Observations:
+	Cosmological Interpretation}},
+  year = {2010},
+  archiveprefix = {arXiv},
+  eprint = {1001.4538},
+  keywords = {printed},
+  owner = {ith},
+  primaryclass = {astro-ph.CO},
+  slaccitation = {%%CITATION = 1001.4538;%%},
+  timestamp = {2010.04.21}
+}
+
 @ARTICLE{Komatsu:2008hk,
   author = {Komatsu, E. and others},
   title = {{Five-Year Wilkinson Microwave Anisotropy Probe (WMAP) ) Observations:Cosmological
@@ -3311,6 +3338,20 @@
   primaryclass = {astro-ph},
   slaccitation = {%%CITATION = 0808.3255;%%},
   timestamp = {2008.08.26}
+}
+
+@ARTICLE{Liguori:2010hx,
+  author = {Liguori, M. and Sefusatti, E. and Fergusson, J. R. and Shellard,
+	E. P. S.},
+  title = {{Primordial non-Gaussianity and Bispectrum Measurements in the Cosmic
+	Microwave Background and Large-Scale Structure}},
+  year = {2010},
+  archiveprefix = {arXiv},
+  eprint = {1001.4707},
+  owner = {ith},
+  primaryclass = {astro-ph.CO},
+  slaccitation = {%%CITATION = 1001.4707;%%},
+  timestamp = {2010.04.20}
 }
 
 @ARTICLE{Linde:2005dd,
@@ -5592,18 +5633,19 @@ k\;Gregory:2008rf\;Johnson2000\;Lidsey:1999mc\;Linde:2005dd\;Lorenz:20
 rtolo:2001cw\;Bartolo:2003bz\;Bartolo:2004if\;Bernardeau:2001qr\;Berna
 rdeau:2002jf\;Bernardeau:2002jy\;Bruni:1996im\;Callin:2006qx\;Carlson:
 2009it\;Chen:2006xjb\;Chen:2008wn\;Cheung:2007sv\;Christopherson:2009b
-t\;Enqvist:2004bk\;Finelli:2003bp\;Finelli:2006wk\;Habib:2005mh\;Huang
-:2000bh\;Kim:2009pf\;Langlois:2005ii\;Langlois:2006vv\;Linde:1993cn\;L
-yth:2004gb\;Lyth:2005du\;Lyth:2005fi\;Maldacena:2002vr\;Malik2005\;Mal
-ik:2001rm\;Malik:2003mv\;Malik:2005cy\;Malik:2006ir\;Malik:2006pm\;Mal
-ik:2008yp\;Martin:2006rs\;Mukhanov:1988jd\;Mukhanov:1990me\;Mukhanov:1
-996ak\;Musso:2006pt\;Nakamura:2003wk\;Nitta:2009jp\;Noh:2004bc\;Rigopo
-ulos:2002mc\;Rigopoulos:2004ba\;Rigopoulos:2004gr\;Rigopoulos:2005xx\;
-Salopek:1988qh\;Salopek:1990jq\;Sasaki:1986hm\;Sasaki:1995aw\;Sasaki:1
-998ug\;Seery:2005gb\;Seery:2006vu\;Seery:2008qj\;Silk:1986vc\;Sinha:20
-05mn\;Starobinsky:1982ee\;Starobinsky:1986fxa\;Sudarsky:2009za\;Tomita
-:1967\;Tomita:2005et\;Tomita:2005nu\;Turner:1986te\;Vernizzi:2004nc\;V
-retblad:2005\;Zeng:2004as\;book:liddle\;hustonmalik\;lidser3\;;
+t\;Enqvist:2004bk\;Fergusson:2009nv\;Finelli:2003bp\;Finelli:2006wk\;H
+abib:2005mh\;Huang:2000bh\;Kim:2009pf\;Langlois:2005ii\;Langlois:2006v
+v\;Liguori:2010hx\;Linde:1993cn\;Lyth:2004gb\;Lyth:2005du\;Lyth:2005fi
+\;Maldacena:2002vr\;Malik2005\;Malik:2001rm\;Malik:2003mv\;Malik:2005c
+y\;Malik:2006ir\;Malik:2006pm\;Malik:2008yp\;Martin:2006rs\;Mukhanov:1
+988jd\;Mukhanov:1990me\;Mukhanov:1996ak\;Musso:2006pt\;Nakamura:2003wk
+\;Nitta:2009jp\;Noh:2004bc\;Rigopoulos:2002mc\;Rigopoulos:2004ba\;Rigo
+poulos:2004gr\;Rigopoulos:2005xx\;Salopek:1988qh\;Salopek:1990jq\;Sasa
+ki:1986hm\;Sasaki:1995aw\;Sasaki:1998ug\;Seery:2005gb\;Seery:2006vu\;S
+eery:2008qj\;Silk:1986vc\;Sinha:2005mn\;Starobinsky:1982ee\;Starobinsk
+y:1986fxa\;Sudarsky:2009za\;Tomita:1967\;Tomita:2005et\;Tomita:2005nu\
+;Turner:1986te\;Vernizzi:2004nc\;Vretblad:2005\;Zeng:2004as\;book:lidd
+le\;hustonmalik\;lidser3\;;
 1 ExplicitGroup:New research areas\;0\;Barnaby:2007yb\;Barnaby:2008fk\
 ;Christopherson:2008ry\;;
 1 ExplicitGroup:DBI and resolved conifolds\;0\;Arroja:2009pd\;Bessada:
