Change to title

--- a/corrections.tex
+++ b/corrections.tex
@@ -874,7 +874,7 @@ with a source term at second order. The code we have developed could be modified
 behaviour of gravitational waves in the early universe at second order.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\textbf{Calculation of $\fnl$; Added to Section~6.3 on Pg 93:}
+\textbf{Discussion of calculation of $\fnl$; Added to Section~6.3 on Pg 93:}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 To go beyond the local shape of the non-Gaussianity it is necessary to calculate the full
